--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,4 +12,7 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+  'http://rubyonrails.org/' %>
+
+<%= image_tag("kitten.jpg", alt: "kitten") %>
+
