--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,5 +14,5 @@
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
   'http://rubyonrails.org/' %>
 
-<%= image_tag("kitten.jpg", alt: "kitten") %>
+<% #= image_tag("kitten.jpg", alt: "kitten") %>
 
